traces/bug_427.txt
examples++-load/msh3.cpp:572: error: DEAD_STORE
  The value written to &hseuil (type double) is never used.
Showing all 1 steps of the trace


examples++-load/msh3.cpp:572:3: Write of unused value
570.     int nbbe = 0; 
571.     hseuil = hmin/10.;
572.     hseuil = hseuil/4.;
         ^
573.     for (int ii=0;ii<Th3.nbe;ii++){
574.       if(Border_ok[ii] == 0) continue; 
